--- a/web/index.html
+++ b/web/index.html
@@ -31,10 +31,10 @@
         <div class="head_nav">
             <ul>
                 <li>
-                    <a href="javascript:;" onclick="home()">主页</a>
+                    <a href="/index.html">主页</a>
                 </li>
                 <li>
-                    <a href="/home/choose/index.html">个人中心</a>
+                    <a href="/personal/index.html">个人中心</a>
                 </li>
                 <li>
                     <a href="/goods/goods/index.html">完美市场</a>
