--- a/web/index.html
+++ b/web/index.html
@@ -23,43 +23,47 @@
 </head>
 <div id="homedata" role="content">
 <body>
-<div id="header" class="header">
-    <div class="head_center">
-        <div class="login">
-            <a><img src="home/icon/logo.jpg" alt="G7love"></a>
-        </div>
-        <div class="head_nav">
-            <ul>
-                <li>
-                    <a href="/index.html">主页</a>
-                </li>
-                <li>
-                    <a href="/personal/index.html">个人中心</a>
-                </li>
-                <li>
-                    <a href="/goods/goods/index.html">完美市场</a>
-                </li>
-                <li>
-                    <a href="/goods/goods/index.html">表白墙</a>
-                </li>
-                <li>
-                    <a href="/goods/goods/index.html">关于</a>
-                </li>
-            </ul>
-        </div>
-        <div class="head_login" style="background: #27303f;">
-            <ul class="login_nav">
-                <li>
-                    <a href="login/index.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
-                </li>
-                <li>
-                    <a href="home/index.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
-                </li>
-            </ul>
+<nav  style="background: #55acee;" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div id="header" class="header">
+        <div class="head_center">
+            <div class="head_nav">
+                <ul>
+                    <li>
+                        <a href="/index.html">主页</a>
+                    </li>
+                    <li>
+                        <a href="/personal/index.html">个人中心</a>
+                    </li>
+                    <li>
+                        <a href="/goods/goods/index.html">完美市场</a>
+                    </li>
+                    <li>
+                        <a href="/goods/goods/index.html">表白墙</a>
+                    </li>
+                    <li>
+                        <a href="/goods/goods/index.html">关于</a>
+                    </li>
+                    <li>
+                        <a href="/goods/goods/index.html">关于</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="head_login">
+                <ul class="login_nav">
+                    <li>
+                        <a href="login/index.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
+                    </li>
+                    <li>
+                        <a href="home/index.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-<div class="container" id = "width">
+
+</nav><!--小导航条-->
+
+<div class="container" id = "width" style="margin-top: 73px;">
     <div class="row masonry-container">
         <template v-for="res in items">
             <div class="col-md-4 col-sm-6 item">
