--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
                         <a href="/goods/goods/index.html">表白墙</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">关于</a>
+                        <a href="/goods/goods/index.html">地图聊天</a>
                     </li>
                     <li>
                         <a href="/goods/goods/index.html">关于</a>
