--- a/web/personal/index.html
+++ b/web/personal/index.html
@@ -39,7 +39,7 @@
                         <a href="/goods/goods/index.html">表白墙</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">关于</a>
+                        <a href="/goods/goods/index.html">地图聊天</a>
                     </li>
                     <li>
                         <a href="/goods/goods/index.html">关于</a>
@@ -67,18 +67,21 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <div class="col-md-3">
                 </div>
-                <div class="col-md-4 " style="margin-top: 9px;">
-                    <div class="col-md-4 ">
+                <div class="col-md-5 " style="margin-top: 9px;">
+                    <div class="col-md-3 ">
                         <p style="text-align:center"><span style="color:#8899a6;">动态</span><br><span style="color:#1b95e0;">20</span></p>
                     </div>
-                    <div class="col-md-4 ">
+                    <div class="col-md-3 ">
                         <p style="text-align:center"><span style="color:#8899a6;">正在关注</span><br><span style="color:#1b95e0;">50</span></p>
                     </div>
-                    <div class="col-md-4 ">
+                    <div class="col-md-3 ">
                         <p style="text-align:center"><span style="color:#8899a6;">已关者</span><br><span style="color:#1b95e0;">1000</span></p>
                     </div>
+                    <div class="col-md-3 ">
+                        <p style="text-align:center"><span style="color:#8899a6;">喜欢</span><br><span style="color:#1b95e0;">1000</span></p>
+                    </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-4">
                     <p style="text-align:center"><button type="button" class="btn btn-primary" style="margin-top: 9px;">修改资料</button></p>
                 </div>
             </div>
@@ -112,7 +115,6 @@
         <div  class="row" style="margin-top: 480px;margin-left: 260px;">
             <div class="col-md-7">
                 <template v-for="res in items">
-                    <img v-bind:src = res.speakImg alt="" v-if="res.speakImg" width="100%">
                     <div class="row masonry-container">
                     <div class="col-md-12 col-sm-12 item">
                         <div class="thumbnail">
@@ -191,6 +193,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <img v-bind:src = res.speakImg alt="" v-if="res.speakImg" width="100%">
                             <div class="row" style="margin-top: 10px;">
                                 <div class="col-md-3 col-sm-6">
                                     <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
@@ -220,9 +223,8 @@
 
                         </div>
                     </div><!--/.item  -->
-            </div> <!--/.masonry-container  -->
+                    </div> <!--/.masonry-container  -->
                 </template><!--v-for-->
-
             </div>
             <div class="col-md-5">
                 <p>好友推荐板块</p>
