--- a/web/personal/index.html
+++ b/web/personal/index.html
@@ -332,6 +332,6 @@
 </div>
 
 </div>
-<script type="text/javascript" src="/home/js/index.js"></script>
+<script type="text/javascript" src="/personal/js/index.js"></script>
 </html>
 
