--- a/web/personal/index.html
+++ b/web/personal/index.html
@@ -20,6 +20,49 @@
     <link rel="stylesheet" href="/home/css/home.css">
     <script src="/public/js/load/load.js"></script>
 </head>
+<style>
+    .about_center{
+        color:#888888;
+    }
+    .about_center .center_top{
+        width:100%;
+        padding-left:20px;
+        padding-top:15px;
+        height:150px;
+    }
+    .about_center .center_top .guli{
+        width:230px;
+        height:120px;
+        float:right;
+        text-align:center;
+    }
+    .about_center .center_top .guli div{
+        height:100px;width:100px;
+        border-radius: 50%;
+        border:5px solid #888;
+        margin-left:65px;
+        padding-top: 5px;
+        cursor:pointer;
+        opacity:0.5;
+    }
+    .about_center .center_top .guli div:hover{
+        opacity:1;
+        color:#F9B34B;
+        border-color:#F9B34B;
+    }
+    .encourage span{
+        margin-top:20px;
+    }
+    .about_center .center_top .guli p{
+        width:200px;
+        text-align:center;
+    }
+    .about_center .center_top .guli div span{
+        font-size: 40px;
+        font-weight:bold;
+        text-align:center;
+    }
+</style>
 <div id="homedata" >
 <body>
 <nav  style="background: #55acee;" class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -113,7 +156,7 @@
         </div>
     </div><!--个人信息-->
     <div  class="row" style="margin-top: 480px;margin-left: 260px;">
-        <div class="col-md-7">
+        <div class="col-md-9">
             <template v-for="res in items" track-by="$index">
                 <div class="row masonry-container">
                 <div class="col-md-12 col-sm-12 item">
@@ -226,8 +269,17 @@
                 </div> <!--/.masonry-container  -->
             </template><!--v-for-->
         </div>
-        <div class="col-md-5">
-            <p>好友推荐板块</p>
+        <div class="col-md-3">
+            <div class="about_center">
+                <div class="center_top">
+                    <div class="center_top_content">
+                    </div>
+                    <div class="guli">
+                        <div class="encourage"><span class="glyphicon glyphicon-thumbs-up"></span></div>
+                        <p>已有<span class="guli_num">296</span>人点赞</p>
+                    </div>
+                </div><!--center_top结束-->
+            </div>
         </div>
     </div><!--动态-->
 
@@ -291,7 +343,7 @@
                         </p>
                     </div>
                     <div style="float: right;width: 80px;font-size: 13px;color:#8899a6; text-align:right">
-                        <p data-toggle="tooltip" data-placement="top" title="{{information.titleTime}}">{{information.time}}</p>
+                        <p>{{information.time}}</p>
                     </div>
                 </div>
                 <div class="row">
