--- a/web/personal/index.html
+++ b/web/personal/index.html
@@ -228,7 +228,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 col-sm-12">
-                                    <a  data-toggle="modal" data-target="#myModal" style="text-decoration:none;color: #0f0f0f" v-if="res.content"  v-on:click="personalInformation(res.speakImg,res.speakImg1,res.speakImg2,res.speakImg3,res.nickname,res.school,res.titleTime,res.time,res.content,res.likeNum,res.forwardingNum,res.reportNum)">
+                                    <a  data-toggle="modal" data-target="#myModal" style="text-decoration:none;color: #0f0f0f" v-if="res.content"  v-on:click="personalInformation(res)">
                                         <p style="margin-top: 10px; word-wrap:break-word">
                                             {{res.content}}
                                         </p>
@@ -240,7 +240,7 @@
                         <div class="row" style="margin-top: 10px;">
                             <div class="col-md-3 col-sm-6">
                                 <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
-                                    <span v-if="res.like"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{res.likeNum?res.likeNum:0}}</span></span>
+                                    <span v-if="res.reportNumTag"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{res.likeNum?res.likeNum:0}}</span></span>
                                     <span v-else><span class="glyphicon glyphicon-heart" style="color: #8899a6;"></span><span style="padding-left: 6px;">{{res.likeNum?res.likeNum:0}}</span></span>
                                 </p>
                             </div>
@@ -252,13 +252,13 @@
                             </div>
                             <div class="col-md-3 col-sm-6">
                                 <p data-toggle="tooltip" data-placement="top" title="转发" style="text-align:center">
-                                    <span v-if="res.forwarding"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{res.forwardingNum?res.forwardingNum:0}}</span></span>
+                                    <span v-if="res.forwardingNumTag"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{res.forwardingNum?res.forwardingNum:0}}</span></span>
                                     <span v-else><span class="glyphicon glyphicon-retweet" style="color: #8899a6"></span><span style="padding-left: 6px;">{{res.forwardingNum?res.forwardingNum:0}}</span></span>
                                 </p>
                             </div>
                             <div class="col-md-3 col-sm-6">
                                 <p data-toggle="tooltip" data-placement="top" title="举报" style="text-align:center">
-                                    <span v-if="res.forwarding"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{res.reportNum?res.reportNum:0}}</span></span>
+                                    <span v-if="res.praiseTag"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{res.reportNum?res.reportNum:0}}</span></span>
                                     <span v-else><span class="glyphicon glyphicon-user" style="color: #8899a6"></span><span style="padding-left: 6px;">{{res.reportNum?res.reportNum:0}}</span></span>
                                 </p>
                             </div>
@@ -354,7 +354,7 @@
                 <div class="row" style="margin-top: 7px;">
                     <div class="col-md-3 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="喜欢" style="text-align:center">
-                            <span v-if="information.like"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span>
+                            <span v-if="information.reportNumTag"><span class="glyphicon glyphicon-heart" style="color: #ff0000;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span>
                             <span v-else><span class="glyphicon glyphicon-heart" style="color: #8899a6;"></span><span style="padding-left: 6px;">{{information.likeNum?information.likeNum:0}}</span></span>
                         </p>
                     </div>
@@ -366,13 +366,13 @@
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="转发" style="text-align:center">
-                            <span v-if="information.forwarding"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
+                            <span v-if="information.forwardingNumTag"><span class="glyphicon glyphicon-retweet" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
                             <span v-else><span class="glyphicon glyphicon-retweet" style="color: #8899a6"></span><span style="padding-left: 6px;">{{information.forwardingNum?information.forwardingNum:0}}</span></span>
                         </p>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <p data-toggle="tooltip" data-placement="top" title="举报" style="text-align:center">
-                            <span v-if="information.forwarding"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span>
+                            <span v-if="information.praiseTag"><span class="glyphicon glyphicon-user" style="color: #ff0000"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span>
                             <span v-else><span class="glyphicon glyphicon-user" style="color: #8899a6"></span><span style="padding-left: 6px;">{{information.reportNum?information.reportNum:0}}</span></span>
                         </p>
                     </div>
